# serde_bencoded

./: Cargo.toml  README.md  shell.nix
.github/: FUNDING.yml
benches/: bench.rs  bench.torrent
examples/: torrent.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: random.rs  teststruct.rs  there_and_back.rs
src/: de.rs  error.rs  lib.rs  ser.rs
src/ser/: only_string_ser.rs
