[package]
name = "serde_bencoded"
version = "0.3.1"
authors = ["Danylo Kondratiev <knightpp@proton.me>"]
license = "MIT OR Apache-2.0"
edition = "2021"

description = "Yet another encoding/decoding library for bencode"
readme = "README.md"
#documentation = 
repository = "https://github.com/knightpp/serde_bencoded"
keywords = ["bencode", "serde", "deserialization", "serialization", "torrent"]
categories = ["encoding"]

[features]
default = ["sort_dictionary"]
# Enables sort by keys when serializing to bencode dictionary.
sort_dictionary = []

[dependencies]
serde = "1.0"
itoa = "1.0"
# for Deserializer
btoi = "0.4"

[dev-dependencies]
serde_bytes = "0.11"
serde = { version = "1.0", features = ["derive"] }
hashers = "1.0"
atty = "0.2" # for the example
bytesize = "1.0" # for the example
criterion = "0.5"

[[bench]]
name = "bench"
harness = false
